mType/tests/testFiles/class/error/undefinedClass.mt
// Try to create instance of undefined class
UndefinedClass obj = new UndefinedClass(); // Error: Unknown class
print(obj);